--- a/Vektorel.Web/Vektorel.Cinemom/Vektorel.Cinemom.csproj
+++ b/Vektorel.Web/Vektorel.Cinemom/Vektorel.Cinemom.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
