--- a/Vektorel.Web/Vektorel.GameCenter/appsettings.Production.json
+++ b/Vektorel.Web/Vektorel.GameCenter/appsettings.Production.json
@@ -6,9 +6,9 @@
     }
   },
   "DatabaseSettings": {
-    "ConnectionString": "Server=.;Database=GameCenterDb;User ID=va249;Password=123;TrustServerCertificate=true"
+    "ConnectionString": "Sunucu"
   },
   "PageSettings": {
-    "ItemCount": 50
+    "ItemCount": 15
   }
 }
