--- a/Vektorel.Web/Vektorel.GameCenter/Properties/launchSettings.json
+++ b/Vektorel.Web/Vektorel.GameCenter/Properties/launchSettings.json
@@ -1,35 +1,11 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:49374",
-      "sslPort": 44328
-    }
-  },
   "profiles": {
-    "http": {
+    "GameCenter Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5024",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7132;http://localhost:5024",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:12000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
